# loglib

./: CMakeLists.txt  readme.md
include/: loglib.h
src/: loglib.cpp
